--- a/src/index.htm
+++ b/src/index.htm
@@ -1,9 +1,27 @@
 <!DOCTYPE html>
 <html>
+	<link rel="stylesheet" href="./style.css">
 	<head>
 		<title>Pick a Number</title>
 	</head>
 	<body>
+		
+		<h1 class="title">Pick A Number</h1>
+		<h3>
+			Pick a number.
+			<br>
+			<br>
+			now multiply it by 5
+			<br>
+			<br>
+			subtract 12
+			<br>
+			<br>
+			finally, divide it by 2
+		</h3>
+		<input type="number" id="inputnumber" placeholder="Enter Your Number Here" >
+		<button onclick="findnumber()">Submit</button>
+		<script src="./script.js"></script>
 	</body>
 </html>
 
