add a secret penny

--- a/src/index.htm
+++ b/src/index.htm
@@ -20,8 +20,10 @@
 			finally, divide it by 2
 		</h3>
 		<input type="number" id="inputnumber" placeholder="Enter Your Number Here" >
-		<button onclick="findnumber()">Submit</button>
-		<script src="./script.js"></script>
+		<button onclick="findnumber()" ondblclick="penny()">Submit</button>
+		<img src="../assets/penny.png" hidden="true" id="penny">
+		<p id="output"></p>
+		<script src="../src/script.js"></script>
 	</body>
 </html>
 
